Switch from URL to URI for auth